--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -664,6 +664,7 @@ target_link_libraries(
 
 add_subdirectory("examples/hello_world")
 add_subdirectory("examples/person_detection")
+add_subdirectory("examples/impsy_model")
 
 add_subdirectory("tests/arena_allocator_non_persistent_arena_buffer_allocator_test")
 add_subdirectory("tests/arena_allocator_persistent_arena_buffer_allocator_test")
